src/test/resources/refCompilerOutput/invalid/semanticErr/variables/undeclaredVar.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:2 -- Variable x is not defined in this scope
